--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="table-responsive">
     <table id="wifeTable" class="table table-hover">
         <caption style="word-break:keep-all">你的第0个老婆</caption>
+	<tr>
+            <td id="attributeText">姓名</td>
+            <td id="attribute">--</td>
+        </tr>
         <tr>
             <td id="heightText">身高</td>
             <td id="height">--</td>
@@ -73,7 +77,7 @@
         <button id="removeWivesBtn" type="button" onclick="onKillWivesPressed()" class="btn btn-primary btn-lg">清除所有老婆</button>
     </div>
     <div id="exWives">
-		<h2>前妻列表</h2>
+		<h2>爱妻列表</h2>
 		<table id="exWivesTable" class="table table-hover exWivesTable"></table>
     </div>
     </div>
