--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="table-responsive">
     <table id="wifeTable" class="table table-hover">
         <caption style="word-break:keep-all">你的第0个老婆</caption>
-	<tr>
-            <td id="attributeText">姓名</td>
-            <td id="attribute">--</td>
+		 <tr>
+            <td id="NameText">姓名</td>
+            <td id="name">--</td>
         </tr>
         <tr>
             <td id="heightText">身高</td>
